--- a/app/views/spree/admin/cash_on_delivery_configs/edit.html.erb
+++ b/app/views/spree/admin/cash_on_delivery_configs/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => 'spree/admin/shared/configuration_menu' %>
 
 <% content_for :page_title do %>
-    <%= Spree.t(:theme_settings) %>
+    <%= Spree.t(:cash_on_delivery) %>
 <% end %>
 
 <%= form_tag admin_cash_on_delivery_configs_path, :method => :put do %>
