--- a/app/views/spree/checkout/payment/_cash_on_delivery.html.erb
+++ b/app/views/spree/checkout/payment/_cash_on_delivery.html.erb
@@ -1,3 +1,3 @@
-<%= t('fee', :amount => number_to_currency(Spree::CashOnDelivery::PAYMENT_CONFIG.charge, currency: Spree::Config.preferred_currency, unit: "")) %> €
+<%= t('fee', :amount => number_to_currency(Spree::CashOnDelivery::Config.charge, currency: Spree::Config.preferred_currency, unit: "")) %> Rs.
 <% @order.bill_address ||= Spree::Address.default %>
 <%= hidden_field_tag "payment_source[#{payment_method.id}][amount]", @order.total %>
